[package]
name = "mdex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "*"
tokio = "1"
iceberg = { git = "https://github.com/mnpw/iceberg-rust.git", branch = "manifestmetadata-accessors" }
iceberg-catalog-glue = { git = "https://github.com/mnpw/iceberg-rust.git", branch = "manifestmetadata-accessors" }
clap = { version = "4.5.31", features = ["derive"] }
chrono = "=0.4.39" # https://github.com/apache/arrow-rs/issues/7196#issuecomment-2685492308
